= Changelog

== `0.9.0.0`

* Updated dependencies.

== `0.8.3.1`

* Frontend
  ** Fix link in footer.

== `0.8.3.0`

* Frontend
  ** Use `touch-action` CSS property for proper touch support on mobile.

== `0.8.2.0`

* Frontend
  ** Use modern pointer events instead of mouse events for better mobile support.

== `0.8.1.0`

* Frontend
  ** Allow dragging to select a timespan for a reservation.

== `0.8.0.0`

* Frontend
  ** Profile pictures are displayed on profiles and can be edited in your settings.
* Database
  ** Add new column `picture_jpeg` to the `user` table.
* API
  ** Add `/picture` route to change your user profile picture.
    *** Use GET to download profile pictures.
    *** Use PUT to upload a new profile picture replacing your old one.
    *** Use DELETE to delete your current profile picture.

== `0.7.1.1`

* Frontend
  ** Set default end time when creating reservations.
* API
  ** Use stricter `time-window` field for `/desk/list` and `/reservation/list` requests.

== `0.7.1.0`

* Frontend
  ** Improve time picker. New simple design like a digital clock.
  ** Improve space view to create reservations.

== `0.7.0.0`

* Backend
  ** Add `sqlite.check-data-integrity-on-startup` field to configuration to run sanity checks on the database.
* Database
  ** Remove space members which might have malicously tried to use a role from a different space to gain access.
    *** This exploit is fixed now.
  ** Add new permission `edit_role`.
     Given to everyone who also has the `edit_space` permission.
* API
  ** Use `edit-space` permission for `/space/kick` and `/space/user/role`.

== `0.6.4.1`

* Frontend
  ** Forward to dashboard after successful email verification.

== `0.6.4.0`

* Frontend
  ** Add new page to view user profiles.
  ** Add new page to edit your user settings.
  ** Add new page to confirm your email.
* API
  ** Add `/password` route to change your user password.